--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npm run build --workspace=src/frontend",
     "start": "npm run build && npm run start --workspace=src/backend",
     "lint": "npm run lint --workspaces",
-    "type-check": "npm run type-check --workspaces"
+    "type-check": "npm run type-check --workspaces",
+    "generate-business-finland-data": "cd src/setup && npm run generate && cd ../.."
   },
   "dependencies": {
     "zod": "^3.22.4"
