--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "generate-business-finland-data": "cd src/setup && npm run generate && cd ../.."
   },
   "dependencies": {
+    "react-router-dom": "^7.9.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
