--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.24.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "@google/genai": "^1.24.0"
+    "pino": "^10.1.0"
   },
   "devDependencies": {
-    "@types/node": "^24.7.2",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.7.2"
   }
 }
