--- a/src/setup/package.json
+++ b/src/setup/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "generate": "npm i && node index.ts"
+    "generate-windows": "npm i && set PLAYWRIGHT_BROWSERS_PATH=src\\setup\\.browsers && npx playwright install chromium && node index.ts",
+    "generate-linux": "npm i && export PLAYWRIGHT_BROWSERS_PATH=src/setup/.browsers && npx playwright install chromium && node index.ts"
   },
   "keywords": [],
   "author": "",
