--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -19,6 +19,7 @@
     "pino": "^10.1.0"
   },
   "devDependencies": {
+    "pino-pretty": "^13.1.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2"
   }
