--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "generate-business-finland-data": "cd src/setup && npm run generate && cd ../.."
   },
   "dependencies": {
+    "react-router-dom": "^6.30.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
