--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -16,11 +16,14 @@
     "@google/genai": "^1.24.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "pino": "^10.1.0"
+    "pino": "^10.1.0",
+    "@anatine/zod-openapi": "^2.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "pino-pretty": "^13.1.2",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.7.2"
+    "@types/node": "^24.7.2",
+    "@types/swagger-ui-express": "^4.1.8",
+    "pino-pretty": "^13.1.2"
   }
 }
