--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "generate-business-finland-data": "cd src/setup && npm run generate && cd ../.."
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
+    "playwright": "^1.56.1",
     "react-router-dom": "^6.30.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
     "concurrently": "9.2.1",
     "typescript": "^5.9.3"
   }
