--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pino": "^10.1.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "fastest-levenshtein": "^1.0.16"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
