--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
+    "lucide-react": "^0.553.0",
     "playwright": "^1.56.1",
     "react-router-dom": "^6.30.1",
     "zod": "^3.22.4"
